<resources>
    <string name="app_name">Compass</string>
    <string name="compass">Կողմնացույց, տեղանքում կողմնորոշվելու սարք։ Ըստ գործողության սկզբունքի
        տարբերում են՝ մագնիսական կողմնացույց, գիրոկողմնացայց, ռադիոկողմնացույց, աստղակողմնացույց։
        Հնագույնն ու ամենատարածվածը մագնիսական կողմնացույցն է, որի գործողության հիմքում ընկած է մագնիսական սլաքի՝
        Երկրի մագնիսական միջօրեականի ուղղությամբ կողմնորոշվելու հատկությունը Ավելի քան 2 հազար տարի առաջ Չինաստանում արդեն
        կիրառում էին հաստատուն մագնիսը՝ հյուսիս-հարավ ուղղությունը որոշելու համար։ Եվրոպայում կողմնացույցը հիշատակվում է
        մոտավորապես 12-րդ դարից, այն ջրի մեջ լողացող խցան էր, որի վրա ամրացվում էր մագնիսական սլաքը։
        Հետագայում կողմնացույցի կառուցվածքը կատարելագործել են իտալացի Ֆլավիո Ջոյան (14-րդ դար) և ուրիշներ։
        Կողմնացույց կիրառվում է նավագնացության, օդագնացության, աստղագիտության մեջ, ռազմական գործում
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_location">Select location</string>
    <string name="my_location">My location</string>
    <string name="select_date_time">Select date/time</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="app">App</string>
</resources>