<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/select_location"/>

        <item
            android:id="@+id/myLocation"
            android:icon="@drawable/ic_baseline_my_location_24"
            android:title="@string/my_location"/>

        <item
            android:id="@+id/dataTime"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/select_date_time"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>

    </group>

        <item
            android:title="@string/app"/>

        <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rate" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share" />

        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/info" />





</menu>